--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>angular-google-maps</artifactId>
+    <version>2.3.2</version>
+    </dependency>
+   <dependency>
+    <groupId>org.webjars.npm</groupId>
+    <artifactId>mysql</artifactId>
+    <version>2.18.1</version>
+   </dependency>
   </dependencies>
 
   <build>
